@@ -1,3 +1,10 @@
+Tue Jul 11 16:03:04 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* elfcode.h (elf_object_p): Use bfd_set_start_address and not
+ 	bfd_get_start_address.
+	(elf_swap_ehdr_in): Sign extend e_entry when applicable.
+	(elf_swap_ehdr_out): Ditto.
+
 2000-07-10  Alexander Aganichev  <AAganichev@hypercom.com>
 
 	* archures.c (bfd_default_scan): Add set of bfd_mach_ cases for
